--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@900&family=Ubuntu&display=swap" rel="stylesheet">
   <!-- Css style sheets -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="styles.css">
   <!-- fontawesome -->
   <script src="https://kit.fontawesome.com/83eed651a9.js" crossorigin="anonymous"></script>
   <!-- Bootstrap -->
@@ -65,7 +65,7 @@
           <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fa-brands fa-google-play"></i> Download</button>
         </div>
         <div class="col-lg-6 ">
-          <img class="title-image" src="images/iphone6.png" alt="iphone-mockup">
+          <img class="title-image" src="iphone6.png" alt="iphone-mockup">
         </div>
 
 
@@ -117,14 +117,14 @@
         <div class="carousel-item active">
           <h2>I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof.</h2>
 
-          <img class="testimonial-image" src="images/dog-img.jpg" alt="dog-profile">
+          <img class="testimonial-image" src="dog-img.jpg" alt="dog-profile">
 
           <em>Pebbles, New York</em>
         </div>
         <div class="carousel-item">
           <h2 class="testimonial-text">My dog used to be so lonely, but with TinDog's help, they've found the love of their life. I think.</h2>
 
-          <img class="testimonial-image" src="images/lady-img.jpg" alt="lady-profile">
+          <img class="testimonial-image" src="lady-img.jpg" alt="lady-profile">
 
           <em>Beverly, Illinois</em>
         </div>
@@ -149,10 +149,10 @@
   <!-- Press -->
 
   <section id="press">
-    <img class="press-img" src="images/techcrunch.png" alt="tc-logo">
-    <img class="press-img" src="images/tnw.png" alt="tnw-logo">
-    <img class="press-img" src="images/bizinsider.png" alt="biz-insider-logo">
-    <img class="press-img" src="images/mashable.png" alt="mashable-logo">
+    <img class="press-img" src="techcrunch.png" alt="tc-logo">
+    <img class="press-img" src="tnw.png" alt="tnw-logo">
+    <img class="press-img" src="bizinsider.png" alt="biz-insider-logo">
+    <img class="press-img" src="mashable.png" alt="mashable-logo">
 
   </section>
 
