--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
     <a class="socials" href="facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
     <a class="socials" href="instagram.com"><i class="fa-brands fa-instagram"></i></a>
     <a class="socials" href="gmail.com"><i class="fa-solid fa-envelope"></i></a>
-    <p>© Copyright TinDog</p>
+    <p>© Copyright Nithin Kothapalli(2022)</p>
 
   </footer>
 
