--- a/index.html
+++ b/index.html
@@ -236,8 +236,8 @@
 
   <footer id="footer">
     <a class="socials" href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
-    <a class="socials" href="facebook.com"><i class="fa-brands fa-facebook-f"></i></a>
-    <a class="socials" href="instagram.com"><i class="fa-brands fa-instagram"></i></a>
+    <a class="socials" href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
+    <a class="socials" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
     <a class="socials" href="gmail.com"><i class="fa-solid fa-envelope"></i></a>
     <p>© Copyright Nithin Kothapalli(2022)</p>
 
