--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
     <a class="socials" href="https://twitter.com/?lang=en"><i class="fa-brands fa-twitter"></i></a>
     <a class="socials" href="https://www.facebook.com/"><i class="fa-brands fa-facebook-f"></i></a>
     <a class="socials" href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a>
-    <a class="socials" href="gmail.com"><i class="fa-solid fa-envelope"></i></a>
+    <a class="socials" href="https://www.google.com/gmail/about/"><i class="fa-solid fa-envelope"></i></a>
     <p>© Copyright Nithin Kothapalli(2022)</p>
 
   </footer>
